csharp/test/Slice/errorDetection/IdentAsKeyword.err
IdentAsKeyword.ice:11: keyword `int' cannot be used as exception name
IdentAsKeyword.ice:14: keyword `double' cannot be used as struct name
IdentAsKeyword.ice:17: keyword `byte' cannot be used as an identifier
IdentAsKeyword.ice:19: keyword `byte' cannot be used as an identifier
IdentAsKeyword.ice:21: class declaration `inTERface' differs only in capitalization from the interface named `INTERFACE'
IdentAsKeyword.ice:8: note: interface `INTERFACE' is defined here
IdentAsKeyword.ice:22: keyword `interface' cannot be used as class name
IdentAsKeyword.ice:22: class declaration `interface' differs only in capitalization from the interface named `INTERFACE'
IdentAsKeyword.ice:8: note: interface `INTERFACE' is defined here
IdentAsKeyword.ice:25: keyword `module' cannot be used as class name
IdentAsKeyword.ice:25: class definition `module' is capitalized inconsistently with its previous name: `MOdule'
IdentAsKeyword.ice:24: note: class `MOdule' was originally defined here
IdentAsKeyword.ice:28: redefinition of class `C'
IdentAsKeyword.ice:27: note: class `C' was originally defined here
IdentAsKeyword.ice:28: keyword `extends' cannot be used as an identifier
IdentAsKeyword.ice:29: keyword `extends' cannot be used as an identifier
IdentAsKeyword.ice:31: keyword `Object' cannot be used as interface name
IdentAsKeyword.ice:32: interface definition `object' is capitalized inconsistently with its previous name: `Object'
IdentAsKeyword.ice:31: note: interface `Object' was originally defined here
IdentAsKeyword.ice:33: keyword `long' cannot be used as interface name
IdentAsKeyword.ice:36: sequence `implements' differs only in capitalization from the sequence named `impLEments'
IdentAsKeyword.ice:35: note: sequence `impLEments' is defined here
IdentAsKeyword.ice:36: keyword `implements' cannot be used as sequence name
IdentAsKeyword.ice:37: keyword `short' cannot be used as sequence name
IdentAsKeyword.ice:39: syntax error
IdentAsKeyword.ice:40: class `moDule' is capitalized inconsistently with its previous name: `::Test::MOdule'
IdentAsKeyword.ice:42: keyword `throws' cannot be used as dictionary name
IdentAsKeyword.ice:43: dictionary `thRows' differs only in capitalization from the dictionary named `throws'
IdentAsKeyword.ice:42: note: dictionary `throws' is defined here
IdentAsKeyword.ice:46: syntax error
IdentAsKeyword.ice:47: class `MODULE' is capitalized inconsistently with its previous name: `::Test::MOdule'
IdentAsKeyword.ice:47: dictionary `d2' uses an illegal key type
IdentAsKeyword.ice:49: syntax error
IdentAsKeyword.ice:52: syntax error
IdentAsKeyword.ice:53: `VOID' is an exception, which cannot be used as a type
IdentAsKeyword.ice:55: keyword `long' cannot be used as enumerator
IdentAsKeyword.ice:55: keyword `byte' cannot be used as enumerator
IdentAsKeyword.ice:58: keyword `module' cannot be used as operation name
IdentAsKeyword.ice:61: keyword `exception' cannot be used as operation name
IdentAsKeyword.ice:64: type `op' is not defined
IdentAsKeyword.ice:67: keyword `byte' cannot be used as an identifier
IdentAsKeyword.ice:70: keyword `byte' cannot be used as an identifier
IdentAsKeyword.ice:73: syntax error
IdentAsKeyword.ice:74: syntax error
